# TrivialDivergence

./: .gitignore  README.md  Triangles.ipynb  conda_readme.md  install.md  rel_to_pypi.txt  requirements.txt  setup.cfg
demos/: demo_01.ipynb
scripts/: helpers.py  main.py
src/nDimAssociations/: AlcraftWilliamsAssociation.py  ReportExport.py  __tests01.py  __tests02.py  __tests03.py  __tests04.py  __tests07.py
src/nDimAssociations/output/: Tests01.html  Tests02.html  Tests03.html
src/ra_trivial/: __tests01.py  __tests02.py  __tests03.py  __tests05.py  __tests07.py  __tests08_randomdata.py  datasets.py  polygon.py  reports.py  trivial.py
src/ra_trivial/output/: Tests01.html  Tests02.html  Tests03 - Copy.html  Tests03.html  Tests07.html
